Actualizacion portafiolio pdte tecnologias

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                 <img src="images/miFoto.jpg" class= "imageAboutPage" alt="">
             </div>
             <div class="col-lg-8 parrafoSobreMi">
-                <p> El mundo ha cambiado y para esto me he adaptado con dedicaci&oacute;n y perserverancia. Decidido a entregar lo mejor de mi, tomo el rumbo del Desarrollo Web como mi campo de desempe&ntilde;o, llevando a &eacute;ste una caracter&iacute;stica que me destaca. Adem&aacute; de mi s&oacute;lida base de conocimientos y competencias t&eacute;cnicas propias de este rubro, sobresale mis a&ntilde;os de experiencia en atenci&oacute;n y orientaci&oacute;n hacia el cliente.
+                <p> El mundo ha cambiado y para esto me he adaptado con dedicaci&oacute;n y perserverancia. Decidido a entregar lo mejor de mi, tomo el rumbo del Desarrollo Web como mi campo de desempe&ntilde;o, llevando a &eacute;ste una caracter&iacute;stica que me destaca. Adem&aacute;s de mi s&oacute;lida base de conocimientos y competencias t&eacute;cnicas propias de este rubro, sobresale mis a&ntilde;os de experiencia en atenci&oacute;n y orientaci&oacute;n hacia el cliente.
                 </p>
                 <div class="row mt-3">
                     <div class="col-md-6">
                         <ul>
-                            <li>Nombre: Carlos Horta</li>
-                            <li>Desarrollador Full-Stack JavaScript</li>
-                            <li>Diplomado de Gesti&oacute;n Comercial UAI</li>
+                            <li>Mi nombre es Carlos Horta</li>
+                            <li>Soy desarrollador Full-Stack JavaScript</li>
+                            <li>Diplomado en Herramientas para la Gestión Comercial UAI</li>
 
                         </ul>
                     </div>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <p> Disfruto de lo que hago y me integro con facilidad a equipos de trabajo, siempre manteniendo un nivel profesional sin perder el toque humano en busqueda de una mejor ineracci&oacute;n con quienes trabajo y nuestros clientes. Soy eficiente en buscar resultados y no temo el tener que liderar iniciativas para que en grupo lograr las metas que tenemos por delante. Siemre dispuesto a oir recomendaciones y consejos en busca de una constante mejora personal y profesional.
+                    <p> Disfruto de lo que hago y me integro con facilidad a equipos de trabajo, siempre manteniendo un nivel profesional sin perder el toque humano en b&uacute;squeda de una mejor interacci&oacute;n con quienes trabajo y nuestros clientes. Soy eficiente en buscar resultados y no temo el tener que liderar iniciativas para que en grupo lograr las metas que tenemos por delante. Siempre dispuesto a oir recomendaciones y consejos en busca de una constante mejora personal y profesional.
                     </p>
                 </div>
             </div>
@@ -82,16 +82,16 @@
   </section>
   <section id="portafolio">
     <div class="container mt-3">
-        <h1 class="text-center">Portfolio</h1>
+        <h1 class="text-center">Portafolio</h1>
         <div class="row">
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/imagenbiblioteca.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Biblioteca</h4>
-                        <p class="card-text">Biblioteca de recursos bibliogr&aacute;ficos codificada principalmente con Ajax, JavaScript y JSON</p>
+                        <p class="card-text">Biblioteca de recursos en espa&ntilde;ol e ingl&eacute;s, codificada con Ajax, JavaScript y JSON</p>
                         <div class="text-center">
-                            <a href="https://austrolupus.com/libros/" target="_blank" class="btn btn-success">Enlace</a>
+                            <a href="https://austrolupus.com/libros/" target="_blank" class="btn btn-success">Vis&iacute;tame</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         <h4 class="card-title">Portafolio</h4>
                         <p class="card-text">Nada mas y nada menos que este portafolio. Codificado en CSS, Bootstrap, JavaScript y HTML</p>
                         <div class="text-center">
-                            <a href="#inicio" class="btn btn-success">Enlace</a>
+                            <a href="#inicio" class="btn btn-success">Vis&iacute;tame</a>
                         </div>
                     </div>
                 </div>
@@ -117,13 +117,54 @@
                         <h4 class="card-title">The Great Guessing Game</h4>
                         <p class="card-text">Juego de adivinar el color en base a un c&oacute;digo RGB. mayoritariamente en JavaScript y CSS</p>
                         <div class="text-center">
-                            <a href="https://austrolupus.github.io/BCJS04/clase37/theColourGame.html" target="_blank" class="btn btn-success">Enlace</a>
+                            <a href="https://austrolupus.github.io/BCJS04/clase37/theColourGame.html" target="_blank" class="btn btn-success">Vis&iacute;tame</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <br>
+        <div class="row">
+            <div class="col-lg-4 mt-4">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="images/imagenRoommates.jpg" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Room Mates</h4>
+                        <p class="card-text">Proyecto que mantiene los gastos de compa&ntilde;eros de casa. Codificado en Node.js y express.</p>
+                        <div class="text-center">
+                            <a href="https://github.com/AustroLupus/BCJS06/tree/main/evaluacion" target="_blank" class="btn btn-success">Vis&iacute;tame</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 mt-4">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="images/imagenBancoSolar.jpg" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Banco Solar</h4>
+                        <p class="card-text">Combinando Node.js junto a PostgreSQL para hacer un segimiento de operaciones y transferencias.</p>
+                        <div class="text-center">
+                            <a href="https://github.com/AustroLupus/BCJS07/tree/main/banco_solar" target="_blank" class="btn btn-success">Vis&iacute;tame</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 mt-4">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="images/imagenTrivia.jpg" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">La Trivia</h4>
+                        <p class="card-text">Base de Datos, Node.js y express, con autentificaci&oacute;n de usuarios y mucho JavaScript.</p>
+                        <div class="text-center">
+                            <a href="https://austrolupus.github.io/BCJS04/clase37/theColourGame.html" target="_blank" class="btn btn-success">Vis&iacute;tame</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 </section>
 <!-- contact section-->
 <section id="contacto">
@@ -165,7 +206,7 @@
         <!-- social media icons -->
         <div class="social-icons mt-4">
             <a href="https://www.twitter.com/AustroLupus" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/carlos-horta-214854228/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/cghortaf" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/austroLupus" target="_blank"><i class="fab fa-github"></i></a>
         </div>
         <div>
