preparando el css del slider

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
         <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-            <h2 class="hero_title">Juntos podemos construirlo</h2>
+            <h1 class="hero_title">Juntos podemos construirlo</h1>
             <p class="hero_desc">Desarrollo web con un toque humano</p>
         </div>
         </div>
@@ -48,7 +48,7 @@
   </section>
   <section id="sobre">
     <div class="container mt-4 pt-4">
-        <h1 class="text-center">Sobre mi</h1>
+        <h2 class="text-center">Sobre mi</h2>
         <div class="row mt-4">
             <div class="col-lg-4">
                 <img src="images/miFoto.jpg" class= "imageAboutPage" alt="">
@@ -80,9 +80,18 @@
             </div>
         </div>
   </section>
+<!--   <section>
+          <div class="container col-md-3 col-sm-6">
+            <div class="slider-cont">
+                <div class="slider-rcnc">
+                    Acá tengo que poner las imagenes del slider
+                </div>
+              </div>
+          </div>
+  </section> -->
   <section id="portafolio">
     <div class="container mt-3">
-        <h1 class="text-center">Portafolio</h1>
+        <h2 class="text-center">Portafolio</h2>
         <div class="row">
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
@@ -169,8 +178,7 @@
 <!-- contact section-->
 <section id="contacto">
     <div class="container mt-3 contactContent">
-        <h1 class="text-center">Contacto</h1>
-        
+        <h2 class="text-center">Contacto</h2>
         <div class="row mt-4">
             <div class="col-lg-6">
                 <!-- mapa obtenido a traves de https://www.embed-map.com -->
